# substrate-node-template

./: README.md  start-bob.sh  start-observer.sh
.github/workflows/: build-push-template.yml
node/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs  service.rs
pallets/dex/rpc/src/: lib.rs
pallets/dex/src/: apis.rs  binary_heap.rs  engine.rs  lib.rs  mock.rs  tests.rs
pallets/lib/binary-heap-plus-rs/: Cargo.toml
pallets/lib/binary-heap-plus-rs/src/: binary_heap.rs  lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: apis.rs  binary_heap.rs  engine.rs  lib.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
